+ Pagination by ajax

--- a/views/books/list.hbs
+++ b/views/books/list.hbs
@@ -1,3 +1,4 @@
+<script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 <div class="all-title-box">
         <div class="container">
             <div class="row">
@@ -12,7 +13,7 @@
         </div>
 </div>
 
-<div class="shop-box-inner">
+<div class="shop-box-inner" >
         <div class="container">
             <div class="row">
                 <div class="col-xl-9 col-lg-9 col-sm-12 col-xs-12 shop-content-right">
@@ -43,7 +44,7 @@
                             </div>
                         </div>
 
-                        <div class="product-categorie-box">
+                        <div class="product-categorie-box" id="products">
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane fade show active" id="grid-view">
                                     <div class="row">
@@ -169,37 +170,122 @@
         </div>
     </div>
 
-<div class="paginate-center">
+
+
+<div class="paginate-center" id="pagination">
     <ul>
         {{#paginate pagination type="first"}}
             <li {{#if disabled}}class="li-paginate" {{/if}} style="float:left;"class="li-paginate" >
-                <a  href="?{{../query}}p={{n}}"><<</a>
+                {{!-- <a  href="?{{../query}}p={{n}}"><<</a> --}}
+                 <a href="#!"onclick="pagination({{json n}})"><<</a>
             </li>
         {{/paginate}}
         {{#paginate pagination type="previous"}}
             <li {{#if disabled}}class="li-paginate" {{/if}}style="float:left;" class="li-paginate">
-                <a href="?{{../query}}p={{n}}"><</a>
+                {{!-- <a href="?{{../query}}p={{n}}"><</a> --}}
+                <a  href="#!"onclick="pagination({{json n}})"><</a>
             </li>
         {{/paginate}}
         {{#paginate pagination type="middle" limit="5"}}
             <li {{#if active}} class=" activate" {{/if}} style="float:left;" class="li-paginate" >
-                <a href="?{{../query}}p={{n}}">{{n}}</a>
+                {{!-- <a href="?{{../query}}p={{n}}">{{n}}</a> --}}
+                <a  href="#!"onclick="pagination({{json n}})">{{n}}</a>
             </li>
         {{/paginate}}
         {{#paginate pagination type="next"}}
             <li {{#if disabled}}class="li-paginate"   {{/if}}style="float:left;" class="li-paginate">
-                <a href="?{{../query}}p={{n}}">>
-                </a>
+                {{!-- <a href="?{{../query}}p={{n}}">> </a> --}}
+                <a  href="#!"onclick="pagination({{json n}})">></a>
             </li>
         {{/paginate}}
         {{#paginate pagination type="last"}}
             <li {{#if disabled}}class="li-paginate"  {{/if}}style="float:left;"class="li-paginate">
-                <a  href="?{{../query}}p={{n}}">>></a>
+                {{!-- <a  href="?{{../query}}p={{n}}">>></a> --}}
+                <a  href="#!" onclick="pagination({{json n}})">>></a>
             </li>
         {{/paginate}}
     </ul>
 </div>
 
+
+
+
+
+
+<script type="text/x-handlebars-template" id="product-list-template">
+  <div class="product-categorie-box" >
+                            <div class="tab-content">
+                                <div role="tabpanel" class="tab-pane fade show active" id="grid-view">
+                                    <div class="row">
+                                      \{{#each books}}
+                                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                                            <div class="products-single fix">
+                                                <div class="box-img-hover">
+                                                    <div class="type-lb">
+                                                        <p class="sale">Sale</p>
+                                                    </div>
+                                                    <img id="cover" src=\{{cover}} class="img-fluid" alt="Image">
+                                                    <div class="mask-icon">
+                                                        <ul>
+                                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
+                                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
+                                                            <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
+                                                        </ul>
+                                                        <a class="cart" href="#">Add to Cart</a>
+                                                    </div>
+                                                </div>
+                                                <div class="why-text">
+                                                    <a href="/books/detail/\{{_id}}">
+                                                    <h4 class="link" >\{{title}}</h4>
+                                                    </a>
+                                                    <h5>\{{basePrice}}</h5>
+                                                    <input type="hidden" id="detail" value="\{{detail}}">
+                                                </div>
+                                            </div>
+                                          </div>
+                                      \{{/each}}     
+                                    </div>
+                                </div>
+                                <div role="tabpanel" class="tab-pane fade" id="list-view">
+                                  \{{#each books}}
+                                    <div class="list-view-box">
+                                        <div class="row">
+                                            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                                                <div class="products-single fix">
+                                                    <div class="box-img-hover">
+                                                        <div class="type-lb">
+                                                            <p class="new">New</p>
+                                                        </div>
+                                                        <img src=\{{cover}} class="img-fluid" alt="Image">
+                                                        <div class="mask-icon">
+                                                            <ul>
+                                                                <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
+                                                                <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
+                                                                <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
+                                                            </ul>
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6 col-md-6 col-lg-8 col-xl-8">
+                                                <div class="why-text full-width">
+                                                    <a href="/books/detail/\{{_id}}">
+                                                        <h4 class="link" >\{{title}}</h4>
+                                                    </a>
+                                                    <h5>\{{basePrice}}</h5>
+                                                    <p>\{{detail}}</p>
+                                                    <a class="btn hvr-hover" href="#">Add to Cart</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                  \{{/each}}
+                                </div>
+                            </div>
+                        </div>
+
+</script>
 
 
 
