+ add comment feature + pagination comment by ajax

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -74,14 +74,14 @@ h4.link:hover
 
 .activate
 {
-    background-color: #189EFF;
+    background-color: #b0b435;
 
 }
 
 .activate
 {
     font-weight: 400;
-    background: rgb(24, 158, 255);
+    background: #b0b435;
     margin: 0px 5px;
     border-radius: 50%;
     width: 27px;
