--- a/views/books/detail.hbs
+++ b/views/books/detail.hbs
@@ -65,44 +65,72 @@
             <div class="row my-5">
                 <div class="card card-outline-secondary my-4">
                     <div class="card-header">
-                        <h2>Product Reviews</h2>
+                        <h2>Nhận xét sản phẩm</h2>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body" style="min-width: 1129px;" id="comment-div">
+                        {{#each comments}}
                         <div class="media mb-3">
                             <div class="mr-2"> 
-                                <img class="rounded-circle border p-1" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Generic placeholder image">
+                                <img class="rounded-circle border p-1" src="{{this.cover}}" alt="Generic placeholder image" width="64px" height="64px">
                             </div>
                             <div class="media-body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-                                <small class="text-muted">Posted by Anonymous on 3/1/18</small>
+                                <p>{{comment}}</p>
+                                <small class="text-muted">Posted by {{account}} {{username}}</small>
                             </div>
                         </div>
-                        <hr>
-                        <div class="media mb-3">
-                            <div class="mr-2"> 
-                                <img class="rounded-circle border p-1" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Generic placeholder image">
-                            </div>
-                            <div class="media-body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-                                <small class="text-muted">Posted by Anonymous on 3/1/18</small>
-                            </div>
+                        <hr >
+                        {{/each}}
+                        <div>
+                            {{#if user}}
+                                <input style="min-width: 50px; float:left; height: 40px; margin-right:10px" type="hidden" placeholder="Hãy nhập tên của bạn" id="username">
+                                <input style="min-width: 900px; float:left; height: 40px" type="text" placeholder="Hãy nhập bình luận của bạn vào đây" id="comment">
+                                <button style="float:right ;font-weight: 700;color: #ffffff" class="btn hvr-hover" onclick="commend({{json user}})"> Nhận xét</button>
+                            {{else}}
+                                <input style="min-width: 50px; float:left; height: 40px; margin-right:10px" type="text" placeholder="Hãy nhập tên của bạn" id="username">
+                                <input style="min-width: 800px; float:left; height: 40px" type="text" placeholder="Hãy nhập bình luận của bạn vào đây" id="comment">
+                                <button style="float:right ;font-weight: 700;color: #ffffff" class="btn hvr-hover" onclick="commend({{json user}})"> Nhận xét</button>
+                            {{/if}}
                         </div>
-                        <hr>
-                        <div class="media mb-3">
-                            <div class="mr-2"> 
-                                <img class="rounded-circle border p-1" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Generic placeholder image">
-                            </div>
-                            <div class="media-body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis et enim aperiam inventore, similique necessitatibus neque non! Doloribus, modi sapiente laboriosam aperiam fugiat laborum. Sequi mollitia, necessitatibus quae sint natus.</p>
-                                <small class="text-muted">Posted by Anonymous on 3/1/18</small>
-                            </div>
-                        </div>
-                        <hr>
-                        <a href="#" class="btn hvr-hover">Leave a Review</a>
                     </div>
+                    
                   </div>
             </div>
-
+{{#if pageCount}}
+<div class="paginate-center" id="pagination-comment">
+    <ul>
+        {{#paginate pagination type="first"}}
+            <li {{#if disabled}}class="li-paginate" {{/if}} style="float:left;"class="li-paginate" >
+                {{!-- <a  href="?{{../query}}p={{n}}"><<</a> --}}
+                 <a href="#"onclick="return commentPagination({{json n}},{{json ../user}})"><<</a>
+            </li>
+        {{/paginate}}
+        {{#paginate pagination type="previous"}}
+            <li {{#if disabled}}class="li-paginate" {{/if}}style="float:left;" class="li-paginate">
+                {{!-- <a href="?{{../query}}p={{n}}"><</a> --}}
+                <a  href="#"onclick="return commentPagination({{json n}},{{json ../user}})"><</a>
+            </li>
+        {{/paginate}}
+        {{#paginate pagination type="middle" limit="5"}}
+            <li {{#if active}} class=" activate" {{/if}} style="float:left;" class="li-paginate" >
+                {{!-- <a href="?{{../query}}p={{n}}">{{n}}</a> --}}
+                <a  href="#"onclick="return commentPagination({{json n}},{{json ../user}})">{{n}}</a>
+            </li>
+        {{/paginate}}
+        {{#paginate pagination type="next"}}
+            <li {{#if disabled}}class="li-paginate"   {{/if}}style="float:left;" class="li-paginate">
+                {{!-- <a href="?{{../query}}p={{n}}">> </a> --}}
+                <a  href="#"onclick="return commentPagination({{json n}},{{json ../user}})">></a>
+            </li>
+        {{/paginate}}
+        {{#paginate pagination type="last"}}
+            <li {{#if disabled}}class="li-paginate"  {{/if}}style="float:left;"class="li-paginate">
+                {{!-- <a  href="?{{../query}}p={{n}}">>></a> --}}
+                <a  href="#" onclick="return commentPagination({{json n}},{{json ../user}})">>></a>
+            </li>
+        {{/paginate}}
+    </ul>
+</div>
+{{/if}}
             <div class="row my-5">
                 <div class="col-lg-12">
                     <div class="title-all text-center">
@@ -140,3 +168,31 @@
         </div>
     </div>
 
+
+
+<script type="text/x-handlebars-template" id="comments-template">
+     <div class="card-body" style="min-width: 1129px;">
+                        \{{#each comments}}
+                        <div class="media mb-3">
+                            <div class="mr-2"> 
+                                <img class="rounded-circle border p-1" src="\{{this.cover}}" alt="Generic placeholder image" width="64px" height="64px">
+                            </div>
+                            <div class="media-body">
+                                <p>\{{comment}}</p>
+                                <small class="text-muted">Posted by \{{account}} \{{username}}</small>
+                            </div>
+                        </div>
+                        <hr >
+                        \{{/each}}
+                        <div>
+                            \{{#if user}}
+                                <input style="min-width: 50px; float:left; height: 40px; margin-right:10px" type="hidden" placeholder="Hãy nhập tên của bạn" id="username">
+                                <input style="min-width: 900px; float:left; height: 40px" type="text" placeholder="Hãy nhập bình luận của bạn vào đây" id="comment">
+                                <button style="float:right ;font-weight: 700;color: #ffffff" class="btn hvr-hover" onclick="commend({{json user}})"> Nhận xét</button>
+                            \{{else}}
+                                <input style="min-width: 50px; float:left; height: 40px; margin-right:10px" type="text" placeholder="Hãy nhập tên của bạn" id="username">
+                                <input style="min-width: 800px; float:left; height: 40px" type="text" placeholder="Hãy nhập bình luận của bạn vào đây" id="comment">
+                                <button style="float:right ;font-weight: 700;color: #ffffff" class="btn hvr-hover" onclick="commend({{json user}})"> Nhận xét</button>
+                            \{{/if}}
+                        </div>
+</script>
