--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -385,6 +385,7 @@
     <script src="/js/contact-form-script.js"></script>
     <script src="/js/custom.js"></script>
     <script src="/js/my-custom.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 </body>
 
 </html>
